<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:screenOrientation="landscape"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="What is the definition of this word?"
    />
    <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option1"
            android:onClick=""
    />
    <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option2"
            android:onClick=""
    />
    <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option3"
            android:onClick=""
    />
    <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option4"
            android:onClick=""
     />
</LinearLayout>